--- a/layouts/partials/cards/accomplishments.html
+++ b/layouts/partials/cards/accomplishments.html
@@ -19,17 +19,16 @@
             <h6 class="card-title mb-0">{{ .title }}</h6>
             
           </div>
-          <div class="sub-title ml-2" >
-            <span class="pl-4 pt-2">{{ .timeline }}</span>
+          <div class="sub-title ml-2 mt-2" >
+            <span class="pl-4 ">{{ .timeline }}</span>
           </div>
         </div>
       </a>
-      <div class="card-body text-justify pl-3 pt-1 pb-1">
+      <div class="card-body text-justify pl-2 pt-1 pb-1">
         <p>{{ .summary | markdownify }}</p>
         <!-- Display certificate summary -->
-       
-           
-            <a class="btn btn-info btn-sm  " href="{{ .url }}" target="_blank" role="button">see certificate</a>
+        <button type="button" class="btn btn-outline-info  ml-2 pl-2 mb-3">see certificate</button> 
+            
         
       </div>
     </div>
