--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,6 +19,7 @@
 {{/*  footer logos  */}}
 {{ $themeLogo := "/images/theme-logo.png" }}
 {{ $hugoLogo := "/images/hugo-logo.svg" }}
+{{ $siteLogo := "/images/site/logo.png" }}
 
 {{/* resize the logos. don't resize svg because it is not supported */}}
 {{ $themeLogo:= resources.Get $themeLogo}}
@@ -32,6 +33,13 @@
   {{ $hugoLogo = $hugoLogo.Resize "32x" }}
 {{ end }}
 {{ $hugoLogo = $hugoLogo.RelPermalink}}
+
+{{ $siteLogo:= resources.Get $siteLogo}}
+{{ if and $siteLogo (ne $siteLogo.MediaType.SubType "svg")}}
+  {{ $siteLogo = $siteLogo.Resize "32x" }}
+{{ end }}
+{{ $siteLogo = $siteLogo.RelPermalink}}
+
 
 <footer class="container-fluid text-center align-content-center footer pb-2">
   <div class="container pt-5">
@@ -92,8 +100,8 @@
   <div class="container">
     <div class="row text-left">
       <div class="col-md-4">
-        <a id="theme" href="#" target="#">
-         
+        <a id="theme" href="#home" target="#">
+          <img src="{{ $siteLogo }}">
          Henzel Moras
         </a>
         
